Changes in development version
======================================

- Bug fix in limits_tau2() when method == "normal_logQ".

Changes in Version 2.6.0 (2021-05-31)
======================================

- Improved handling of effect sizes with observed magnitudes of exactly zero in individual-correction meta-analyses. To accurately account for the estimation of error variances after correcting for artifacts, effect sizes of exactly zero are substituted with functionally equivalent but computationally non-zero values via the "zero_substitute " argument of the control_psychmeta() function. The default "zero_substitute" value is .Machine$double.eps -- this permits the effect size to be treated as functionally zero while still allowing an attenuation factor to be computed, which is used to estimate a more accurate corrected error variance value.

- Reduced number of dependencies. 

- Updated documentation.


Changes in Version 2.5.1 (2021-05-07)
======================================
- Bug fix in consolidating dependent correlations when the dataset contains same-construct intercorrelations.


Changes in Version 2.5.0 (2021-05-02)
======================================
- Added var_error_spearman(), var_error_mult_R(), and var_error_mult_Rsq() functions.

- Made internal code updates to improve performance.


Changes in Version 2.4.2 (2020-08-18)
======================================
- Fixed a bug in which missing artifacts were sometimes not imputed when resolving dependency among observations.

- Improved standard error for SD_res when var_unbiased == TRUE.


Changes in Version 2.4.1 (2020-07-16)
======================================
- Restore 'overview' vignette.


Changes in Version 2.4.0 (2020-07-11)
======================================
- Bug fix in convert_es().

- convert_es() now returns a simple frame with converted effect sizes, variances, and (effective) sample sizes.

- Bug fix in moderator reconciliation.
